Refactor unit stats to explicit 3-value scaling, removing implicit multipliers